[package]
name = "cural"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/cural"
repository = "https://github.com/CURVoid/cural.git"
homepage = "https://github.com/CURVoid/cural.git"
keywords = ["cural", "process", "windows", "api", "processes"]
description = "Windows process memory model"

[dependencies.winapi]
version = "0.3.9"
features = [
  "tlhelp32",
  "handleapi",
  "memoryapi",
  "wow64apiset",
  "processthreadsapi"
]